# scrybe

./: .gitignore  AUDIT-LOG.md  CHANGELOG.md  Cargo.toml  INSTALL.md  MAINTENANCE.md  README.md  audit.toml  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly-e2e.yml  release.yml  reproducibility.yml
docs/: LEGAL.md  RELEASE.md  ci-self-hosted.md  dependency-decisions.md  pitch.md  system-design.md  system-overview.md
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/fdroid/: dev.scrybe.scrybe.yml
packaging/flatpak/: dev.scrybe.scrybe.yaml
packaging/homebrew/: scrybe.rb
packaging/macos-app/: Info.plist.template  README.md  build-app.sh  entitlements.plist
packaging/scoop/: scrybe.json
scripts/: check-egress-baseline.py  check-loc-budget.py
scrybe/: Cargo.toml  README.md
scrybe-android/: Cargo.toml
scrybe-android/src/: backend.rs  error.rs  lib.rs
scrybe-capture-linux/: Cargo.toml
scrybe-capture-linux/src/: backend.rs  error.rs  lib.rs
scrybe-capture-mac/: Cargo.toml
scrybe-capture-mac/src/: coreaudio_tap.rs  error.rs  lib.rs
scrybe-capture-mic/: Cargo.toml
scrybe-capture-mic/src/: error.rs  lib.rs
scrybe-capture-win/: Cargo.toml
scrybe-capture-win/src/: backend.rs  error.rs  lib.rs
scrybe-cli/: Cargo.toml
scrybe-cli/src/: hotkey.rs  main.rs  prompter.rs  runtime.rs  shell.rs  tray.rs
scrybe-cli/src/commands/: bench.rs  doctor.rs  init.rs  list.rs  mod.rs  record.rs  show.rs
scrybe-core/: Cargo.toml
scrybe-core/benches/: pipeline.rs
scrybe-core/src/: capture.rs  config.rs  consent.rs  context.rs  diarize.rs  error.rs  hooks.rs  lib.rs  notes.rs  session.rs
scrybe-core/src/context/: ics.rs  mod.rs
scrybe-core/src/diarize/: kind.rs  mod.rs  pyannote_onnx.rs
scrybe-core/src/hooks/: git.rs  indexer.rs  mod.rs  webhook.rs
scrybe-core/src/pipeline/: chunker.rs  encoder.rs  interleave.rs  mod.rs  resample.rs  vad.rs
scrybe-core/src/providers/: llm.rs  mod.rs  openai_compat_llm.rs  openai_compat_stt.rs  parakeet_local.rs  retry.rs  stt.rs  whisper_local.rs
scrybe-core/src/storage/: atomic.rs  mod.rs  session_dir.rs  transcript_log.rs
scrybe-core/src/testing/: mod.rs  multilingual.rs
scrybe-core/src/types/: audio.rs  consent.rs  language.rs  mod.rs  session.rs  transcript.rs
scrybe-core/tests/: multilingual_corpus.rs
scrybe/src/: lib.rs
supply-chain/: audits.toml  config.toml
tests/fixtures/multilingual/: MANIFEST.toml
