[workspace]
resolver = "2"
members = [
    "scrybe",
    "scrybe-cli",
]

[workspace.package]
authors = ["Mathews Tom"]
edition = "2021"
homepage = "https://github.com/Mathews-Tom/scrybe"
repository = "https://github.com/Mathews-Tom/scrybe"
license = "Apache-2.0"
rust-version = "1.83"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
