[workspace]
resolver = "2"
members = [
    "scrybe",
    "scrybe-core",
    "scrybe-cli",
]

[workspace.package]
authors = ["Mathews Tom"]
edition = "2021"
homepage = "https://github.com/Mathews-Tom/scrybe"
repository = "https://github.com/Mathews-Tom/scrybe"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.lints.rust]
# `deny` rather than `forbid` so the atomic-write recipe in
# `scrybe-core::storage::atomic` can `#[allow(unsafe_code)]` at the
# `fcntl(F_FULLFSYNC)` (macOS) and `MoveFileExW` (Windows) call sites
# required by `docs/system-design.md` §8.3. Every other crate continues
# to deny unsafe by default.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
directories = "5"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.42", default-features = false, features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
ulid = { version = "1", features = ["serde"] }

[workspace.dependencies.libc]
version = "0.2"

[workspace.dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation", "Win32_Storage_FileSystem"]

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
