[workspace]
resolver = "2"
members = [
    "scrybe",
    "scrybe-core",
    "scrybe-cli",
    "scrybe-capture-mac",
    "scrybe-capture-linux",
]

[workspace.package]
authors = ["Mathews Tom"]
edition = "2021"
homepage = "https://github.com/Mathews-Tom/scrybe"
repository = "https://github.com/Mathews-Tom/scrybe"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.lints.rust]
# `deny` rather than `forbid` so the atomic-write recipe in
# `scrybe-core::storage::atomic` can `#[allow(unsafe_code)]` at the
# `fcntl(F_FULLFSYNC)` (macOS) and `MoveFileExW` (Windows) call sites
# required by `docs/system-design.md` §8.3. Every other crate continues
# to deny unsafe by default.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
directories = "5"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
hmac = { version = "0.12", default-features = false, features = ["std"] }
ical = { version = "0.10", default-features = false, features = ["ical"] }
# rustls-only TLS — no openssl in the dependency tree, keeps the
# air-gappable build story honest (`docs/system-design.md` §10).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false, features = ["std"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1.42", default-features = false, features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
ulid = { version = "1", features = ["serde"] }
# `=2.5.0` precise pin: `url 2.5.x` past .0 pulls `idna 1.x` →
# `idna_adapter 1.x` → `icu_normalizer 2.2.0` (rustc 1.86 MSRV); the
# workspace pins rustc 1.85 in `rust-toolchain.toml`. PR #25 introduced
# this pin against `idna 0.5.x` for the `git2 → url` chain; the same
# rationale applies once `reqwest`/`wiremock` add their own `url` paths.
url = { version = "=2.5.0", default-features = false }
# Mock HTTP for provider/webhook tests. Dev-only; keeps the
# default-feature graph free of test scaffolding (the `egress-audit`
# CI lane verifies production builds carry no network crates).
wiremock = "0.6"

[workspace.dependencies.libc]
version = "0.2"

[workspace.dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation", "Win32_Storage_FileSystem"]

# Apple bindings for the macOS Core Audio Taps adapter
# (`scrybe-capture-mac`, feature `core-audio-tap`). Pinned to the 0.3
# series of the `objc2`-family crates. These dependencies are only
# pulled in when the consuming crate opts in via the
# `core-audio-tap` feature gate, so non-macOS builds remain
# Apple-framework-free.

[workspace.dependencies.objc2]
version = "0.6"

[workspace.dependencies.objc2-foundation]
version = "0.3"
default-features = false
features = ["std", "NSObject", "NSArray", "NSDictionary", "NSString", "NSValue"]

[workspace.dependencies.objc2-core-foundation]
version = "0.3"
default-features = false
features = ["std", "objc2", "CFBase", "CFString", "CFDictionary"]

[workspace.dependencies.objc2-core-audio]
version = "0.3"
default-features = false
features = [
    "std",
    "objc2",
    "objc2-core-audio-types",
    "objc2-foundation",
    "AudioHardware",
    "block2",
    "dispatch2",
]

[workspace.dependencies.objc2-core-audio-types]
version = "0.3"
default-features = false
features = ["std", "objc2", "CoreAudioBaseTypes"]

[workspace.dependencies.block2]
version = "0.6"

[workspace.dependencies.dispatch2]
version = "0.3"
default-features = false
features = ["std", "objc2"]

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

# `cargo-dist` 0.25.x runs `cargo build --profile=dist` for release
# tarballs and errors out with "profile `dist` is not defined" if this
# block is missing. Inheriting from `release` keeps tarball builds bit-
# identical to a plain release build; cargo-dist's reproducibility
# requirements (SOURCE_DATE_EPOCH + remap-path-prefix) are wired up in
# `.github/workflows/release.yml` and apply to whichever profile dist
# uses, so adding profile-specific overrides here would silently
# diverge the local-built and CI-built artifacts.
[profile.dist]
inherits = "release"

# cargo-dist is the release-tarball builder driven by `.github/workflows/release.yml`.
# Cargo treats `[workspace.metadata.*]` as opaque, so this block is invisible to
# every other tool (clippy, rustc, the egress audit, the LoC budget). Pinned to
# the 0.25 series per `.docs/development-plan.md` §13.1.
#
# `installers = ["shell"]` makes cargo-dist publish a `scrybe-cli-installer.sh`
# release asset that arch-detects, downloads the right tarball, verifies the
# SHA256 manifest, extracts, and places the binary on PATH in a single
# `curl | sh` invocation. As a side effect of being downloaded by `curl`
# (not Safari), the installed binary never gets the `com.apple.quarantine`
# attribute, so Gatekeeper's "Apple cannot verify" dialog does not fire —
# the unsigned-binary friction documented in `INSTALL.md` is bypassed for
# users who choose this path. Manual-tarball users still need the
# `xattr -dr com.apple.quarantine` step; that flow remains documented as
# the audit-friendly alternative.
[workspace.metadata.dist]
cargo-dist-version = "0.25.1"
ci = ["github"]
installers = ["shell"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
pr-run-mode = "plan"
allow-dirty = ["ci"]
publish-jobs = []
include = ["INSTALL.md", "LICENSE", "README.md"]
# `scrybe-cli` is the only binary-producing crate in the workspace; it is opted
# in via its own `[package.metadata.dist]` block. Other workspace members are
# library or placeholder crates and stay opted out.
