[package]
name = "scrybe-android"
version = "1.0.0"
description = "Android audio capture adapter for scrybe. Implements scrybe-core's AudioCapture trait via MediaProjection (API 29+, system audio) with a microphone-only fallback for hosts that decline MediaProjection consent. The live JNI binding (and the uniffi-generated Kotlin facade) is tracked as a v0.5.x follow-up."
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
# `cdylib` is the artifact the Android NDK Gradle plugin packages into
# `jniLibs/`; `rlib` keeps the crate testable via `cargo test` on every
# host so the trait surface stays under the workspace coverage gate.
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enables the live `MediaProjection` JNI binding. Off by default so the
# workspace can be type-checked on macOS / Linux / Windows hosts; the
# Android release build flips it on. Mirrors the `core-audio-tap`
# (mac), and `wasapi-loopback` (windows) feature patterns.
#
# The current release ships the trait surface, the `Backend` enum, the
# config wiring, and a host-API-level probe; the live JNI binding (and
# the uniffi-generated Kotlin facade) lands as a v0.5.x follow-up.
media-projection = []

[dependencies]
async-trait.workspace = true
futures.workspace = true
scrybe-core = { path = "../scrybe-core", version = "1.0.0" }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "test-util", "time"] }

[lints]
workspace = true
