[package]
name = "scrybe-capture-mac"
version = "0.1.0-alpha.1"
description = "macOS audio capture adapter for scrybe. Implements scrybe-core's AudioCapture trait via Core Audio Taps (macOS 14.4+) primary path with a ScreenCaptureKit fallback for 13.0–14.3."
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
# Enables the live Core Audio Taps binding via objc2. Requires macOS
# 14.4+ at runtime; building with this feature pulls objc2 + the
# CoreAudio framework. Off by default so the workspace can be type-
# checked on Linux/Windows hosts.
core-audio-tap = []

[dependencies]
async-trait.workspace = true
futures.workspace = true
scrybe-core = { path = "../scrybe-core", version = "0.1.0-alpha.1" }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true
