[package]
name = "scrybe-capture-mic"
version = "1.0.4"
description = "Cross-platform microphone capture adapter for scrybe. Implements scrybe-core's AudioCapture trait via cpal against the host's default input device. Closes the v0.1 mic-only path documented in `.docs/development-plan.md` §7.2 that shipped under stub providers through v1.0."
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
# Enables the live cpal binding. Off by default so the workspace can
# be type-checked on hosts where cpal cannot link (cross-build CI
# without ALSA / CoreAudio / WASAPI headers); the macOS / Linux /
# Windows release builds flip it on. Mirrors the `core-audio-tap`
# (mac), `wasapi-loopback` (windows), and `media-projection` (android)
# feature patterns used by the other capture adapters.
live-mic = ["dep:cpal"]

[dependencies]
async-trait.workspace = true
cpal = { version = "0.15", optional = true }
futures.workspace = true
scrybe-core = { path = "../scrybe-core", version = "1.0.4" }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "test-util", "time"] }

[lints]
workspace = true
