[package]
name = "scrybe-cli"
version = "0.9.0-rc1"
description = "Command-line driver for scrybe: init, record, list, show, doctor."
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "scrybe"
path = "src/main.rs"
doc = false

[features]
default = []
hook-git = ["scrybe-core/hook-git"]
whisper-local = ["scrybe-core/whisper-local"]
# Desktop shell: tray-icon + global-hotkey wired to a main-thread event
# pump so `scrybe record --shell` toggles capture from a global hotkey
# and a status-bar Quit menu.
#
# Default-OFF because the Linux build of `tray-icon` 0.23 needs GTK
# headers, which the GitHub-hosted `ubuntu-24.04` runner does not carry
# without an `apt install` step. A maintainer building for desktop
# distribution opts in via `cargo install --features cli-shell` (or per
# the release recipe in `.docs/development-plan.md` §13).
cli-shell = [
    "dep:tray-icon",
    "dep:global-hotkey",
    "dep:keyboard-types",
    "dep:crossbeam-channel",
    "dep:core-foundation",
]

[dependencies]
anyhow = "1"
async-trait.workspace = true
chrono.workspace = true
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = { version = "0.5", optional = true }
directories.workspace = true
futures.workspace = true
global-hotkey = { version = "0.7", optional = true }
keyboard-types = { version = "0.8", optional = true }
scrybe = { path = "../scrybe", version = "0.9.0-rc1" }
scrybe-capture-mac = { path = "../scrybe-capture-mac", version = "0.9.0-rc1" }
scrybe-core = { path = "../scrybe-core", version = "0.9.0-rc1" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "sync", "time"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = { version = "0.23", optional = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.10", optional = true }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[lints]
workspace = true

# Tarball generation for `scrybe-cli` is owned by cargo-dist. Other workspace
# crates (`scrybe`, `scrybe-core`, `scrybe-capture-mac`) are libraries or
# placeholders and stay opted out via the absence of this block.
#
# `cli-shell` and `hook-git` are enabled so the released binary boots straight
# into the tray + global-hotkey shell with the git auto-commit hook compiled
# in. `whisper-local` is intentionally NOT enabled here; building whisper-rs
# in the release workflow needs a verified C++ toolchain on the macos-14
# runner and is gated to a follow-up release.
[package.metadata.dist]
dist = true
features = ["cli-shell", "hook-git"]
default-features = true
