[package]
name = "scrybe-core"
version = "0.1.0"
description = "Core domain types, error hierarchy, extension traits, atomic-write storage primitives, and configuration loader for the scrybe local-first meeting transcription system."
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
# Enables Hook::Git via git2 / libgit2. Off by default so the workspace
# builds without a system libgit2; enable in scrybe-cli when the user
# turns on the [hooks.git] section in config.
hook-git = ["dep:git2"]
# Enables WhisperLocalProvider via whisper-rs (links libwhisper / Metal /
# BLAS depending on platform). Off by default so the workspace builds
# without C++ toolchain; scrybe-cli enables it via its own feature flag.
whisper-local = ["dep:whisper-rs"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
directories.workspace = true
futures.workspace = true
git2 = { version = "0.19", default-features = false, optional = true }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true
whisper-rs = { version = "0.13", optional = true, default-features = false }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
pretty_assertions = "1"
proptest = "1.5"
tempfile = "3"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }

# Pipeline-stage micro-benchmarks per `docs/system-design.md` §11 ("Bench
# gate") and `.docs/development-plan.md` §7.3.4. Run locally with
# `cargo bench -p scrybe-core`. CI gates only on `cargo bench --no-run`
# (compile) — the throughput-regression gate runs on the self-hosted
# Tier-3 Mac per `system-design.md` §11.
[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
