[package]
name = "scrybe-core"
version = "1.0.3"
description = "Core domain types, error hierarchy, extension traits, atomic-write storage primitives, and configuration loader for the scrybe local-first meeting transcription system."
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
# Enables Hook::Git via git2 / libgit2. Off by default so the workspace
# builds without a system libgit2; enable in scrybe-cli when the user
# turns on the [hooks.git] section in config.
hook-git = ["dep:git2"]
# Enables WhisperLocalProvider via whisper-rs (links libwhisper / Metal /
# BLAS depending on platform). Off by default so the workspace builds
# without C++ toolchain; scrybe-cli enables it via its own feature flag.
whisper-local = ["dep:whisper-rs"]
# Enables ParakeetLocalProvider via sherpa-rs (links sherpa-onnx C++
# runtime). Off by default so the workspace builds without an ONNX C++
# toolchain; scrybe-cli enables it on opt-in. When the feature is
# disabled the type still exists but transcribe() returns
# SttError::ModelNotLoaded. The live binding lands as a v0.4.x
# follow-up tracked in `.docs/development-plan.md` §10.2.
parakeet-local = []
# OpenAI-compatible STT and LLM providers (Groq, OpenAI, Together,
# vLLM, …). Pulls in `reqwest` with rustls-only TLS; the
# `egress-audit` CI lane stays green only on the default-feature graph.
openai-compat = ["dep:reqwest", "dep:url"]
# `IcsFileProvider` — calendar context from local `.ics` files via
# the `ical` crate.
context-ics = ["dep:ical"]
# `WebhookHook` — async POST + HMAC-SHA256-signed payload to a
# configured URL.
hook-webhook = ["dep:reqwest", "dep:url", "dep:hmac", "dep:sha2", "dep:hex"]
# `TantivyIndexerHook` — incremental local full-text index at
# `<storage.root>/.index/`. Local-only; never source-of-truth (the
# index is regenerable from session folders via `rebuild_all`). See
# `docs/system-design.md` §12.1.
hook-tantivy = ["dep:tantivy"]
# Enables the live `pyannote-onnx` runtime backend behind
# `PyannoteOnnxDiarizer`. Off by default so the workspace builds
# without an ONNX C++ toolchain; the trait surface and the cluster-to-
# attendee mapping are exercised by an in-tree stub backend so the
# selection and the routing logic remain testable on every PR. The
# live binding lands as a v0.5.x follow-up tracked in
# `.docs/development-plan.md` §11.2.
diarize-pyannote = []
# Enables the live `OggOpusEncoder` behind the existing `Encoder`
# trait in `scrybe-core::pipeline::encoder`. Anticipated since v0.5
# (see encoder.rs module docstring); landed at v1.0.2 to close the
# v0.1 carryover where `NullEncoder` wrote raw PCM under an `.opus`
# filename. Off by default so the workspace builds without libopus;
# scrybe-cli enables it in release builds. With the feature off, the
# pipeline falls back to `NullEncoder` (the test-only deterministic
# implementation).
encoder-opus = ["dep:opus", "dep:ogg"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
directories.workspace = true
futures.workspace = true
git2 = { version = "0.19", default-features = false, optional = true }
hex = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
ical = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
tantivy = { workspace = true, optional = true }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true
url = { workspace = true, optional = true }
whisper-rs = { version = "0.13", optional = true, default-features = false }
# Opus + Ogg deps for the `encoder-opus` feature. Both are local-only
# (no network surface), so they do not perturb the `egress-audit` CI
# lane; only pulled in when the consumer enables `encoder-opus`. The
# `opus` crate links libopus (vendored on macOS via opus-sys, system
# package elsewhere). `ogg` is pure Rust and writes the Ogg container
# framing required by RFC 7845 OpusHead / OpusTags.
opus = { version = "0.3", optional = true }
ogg = { version = "0.9", optional = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
pretty_assertions = "1"
proptest = "1.5"
tempfile = "3"
tokio = { version = "1.42", features = ["macros", "net", "rt-multi-thread", "sync", "time", "test-util"] }
wiremock = { workspace = true }

# Pipeline-stage micro-benchmarks per `docs/system-design.md` §11 ("Bench
# gate") and `.docs/development-plan.md` §7.3.4. Run locally with
# `cargo bench -p scrybe-core`. CI gates only on `cargo bench --no-run`
# (compile) — the throughput-regression gate runs on the self-hosted
# Tier-3 Mac per `system-design.md` §11.
[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
